refactor(tests): refocus tests on public API behavior (unfinished